# yamp

./: LICENSE  README.md  pyproject.toml  yamp.py
examples/: fabric_1.21.1.toml  forge_1.12.2.toml
