[project]
name = "yamp"
version = "0.1.0"
description = "Yet Another Minecraft Packmaker"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.14",
    "mock>=5.2.0",
    "msgpack>=1.1.0",
    "picomc>=0.5.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "xxhash>=3.5.0",
]
